--- a/package.json
+++ b/package.json
@@ -6,13 +6,14 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
     "lint": "vue-cli-service lint",
     "build-icon": "electron-icon-builder --input=./public/icon.jpg --output=build --flatten",
     "electron:build": "vue-cli-service electron:build",
     "electron:serve": "vue-cli-service electron:serve",
     "postinstall": "electron-builder install-app-deps",
-    "postuninstall": "electron-builder install-app-deps"
+    "postuninstall": "electron-builder install-app-deps",
+    "build": "electron-packager . my-vue-proj --platform linux --arch x64 --out dist/",
+    "deb64": "electron-installer-debian --src dist/my-vue-proj-linux-x64/ --dest dist/installers/ --arch amd64"
   },
   "main": "background.js",
   "dependencies": {
