--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "interface",
-  "version": "0.1.0",
+  "name": "interface_0.2.0",
+  "version": "0.2.0",
   "author": "liujian <212839876@qq.com>",
   "license": null,
   "private": true,
